--- a/template/Podfile
+++ b/template/Podfile
@@ -1,6 +1,7 @@
-use_frameworks!
-
 target '${POD_NAME}' do
+  platform :osx, '10.14'
+  use_frameworks!
+
   pod "Bow", "~> 0.2.0"
   pod "BowEffects", "~> 0.2.0"
   pod "BowResult", "~> 0.2.0"
