--- a/template/Config/Info.plist
+++ b/template/Config/Info.plist
@@ -17,8 +17,8 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>1.0</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019. The nef authors.</string>
+	<string>Copyright © 2019. The NEF authors.</string>
 </dict>
 </plist>
