--- a/template/Podfile
+++ b/template/Podfile
@@ -7,4 +7,8 @@ target '${POD_NAME}' do
   pod "BowResult", "~> 0.0.0"
   pod "BowRx", "~> 0.0.0"
   pod "BowBrightFutures", "~> 0.0.0"
+  pod "BowOptics", "~> 0.0.0"
+  pod "BowGeneric", "~> 0.0.0"
+  pod "BowRecursionSchemes", "~> 0.0.0"
+  pod "BowFree", "~> 0.0.0"
 end
