Fix detection for invalid nodes
- Support for detection for invalid nodes.
- Remove unuseful code

--- a/markdown/JekyllMarkdown.xcodeproj/xcshareddata/xcschemes/Markup.xcscheme
+++ b/markdown/JekyllMarkdown.xcodeproj/xcshareddata/xcschemes/Markup.xcscheme
@@ -26,10 +26,23 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      systemAttachmentLifetime = "keepNever"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8B6FC63B221EFE61008F7694"
+            BuildableName = "libMarkup.a"
+            BlueprintName = "Markup"
+            ReferencedContainer = "container:JekyllMarkdown.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8B66EBB0221FFF4F0001DCA2"
