--- a/template/PROJECT/Info.plist
+++ b/template/PROJECT/Info.plist
@@ -19,6 +19,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019. The NEF authors.</string>
+	<string>Copyright © 2019. The nef authors.</string>
 </dict>
 </plist>
