update template to support projects create for macosx or iOS (different folders)

--- a/template/ios/PROJECT.xcodeproj/xcshareddata/xcschemes/PROJECT.xcscheme
+++ b/template/ios/PROJECT.xcodeproj/xcshareddata/xcschemes/PROJECT.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8BACBE8222576CAD00266845"
-               BuildableName = "PROJECT_ios.framework"
-               BlueprintName = "PROJECT-ios"
+               BuildableName = "PROJECT.framework"
+               BlueprintName = "PROJECT"
                ReferencedContainer = "container:PROJECT.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8BACBE8222576CAD00266845"
-            BuildableName = "PROJECT_ios.framework"
-            BlueprintName = "PROJECT-ios"
+            BuildableName = "PROJECT.framework"
+            BlueprintName = "PROJECT"
             ReferencedContainer = "container:PROJECT.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,8 +64,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8BACBE8222576CAD00266845"
-            BuildableName = "PROJECT_ios.framework"
-            BlueprintName = "PROJECT-ios"
+            BuildableName = "PROJECT.framework"
+            BlueprintName = "PROJECT"
             ReferencedContainer = "container:PROJECT.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
