render markdown using playground’s page as filename

--- a/markdown/Markdown.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
+++ b/markdown/Markdown.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
@@ -70,6 +70,10 @@
             argument = "--to &quot;/Users/miguelangel/Desktop&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--filename &quot;Render&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
