--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,52 @@
-**/.DS_Store
-**/xcuserdata/
-BowPlayground
+# Created by https://www.gitignore.io/api/android,intellij
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
+*.log
+
+# Intellij
+.idea/
+reports/
+/out/
+
+KotlinTest
+.kotlintest
+
+# Keystore files
+*.jks
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+## Jekyll
+_site
+.sass-cache
+.jekyll-metadata
+
+## OSX generated
+.DS_Store
+
+## Ruby environment normalization:
+.bundle/
+vendor/
+/lib/bundler/man/
