--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: swift
 osx_image: xcode10.2
 
+sudo: required
+addons:
+  homebrew:
+    taps:
+    - bow-swift/nef
+    packages:
+    - nef
+
 env:
   global:
     - PROJECT="./markdown/Markdown.xcodeproj"
@@ -22,6 +30,16 @@ jobs:
         - set -o pipefail
         - xcodebuild "$ACTION" -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO -destination "$DEST" | xcpretty -c
 
-      #if: branch = master AND tag IS present
-      #script:
-      #  - sh ./bin/nef-release
+      - stage: deploy-docs
+        if: branch = master AND type != pull_request
+        before_install:
+          - gem update --system
+          - gem install bundler
+        script:
+          - nef jekyll --project contents/Documentation --output docs --main-page contents/Home.md
+        deploy:
+          provider: pages
+          skip-cleanup: true
+          github-token: $GITHUB_TOKEN
+          keep-history: true
+          local-dir: docs
