--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
         - set -o pipefail
         - xcodebuild "$ACTION" -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO -destination "$DEST" | xcpretty -c
     - stage: deploy-docs
-      if: branch = master AND type != pull_request
+      #if: branch = master AND type != pull_request
       before_install:
         - gem update --system
         - gem install bundler
@@ -42,3 +42,5 @@ jobs:
         github-token: $GITHUB_TOKEN
         keep-history: true
         local-dir: docs
+        on:
+          branch: gh-pages
