--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,19 @@ jobs:
     # Declare the same stage name multiple times to test multiple versions.
     # Using a YAML alias to prevent redundancy.
     # https://github.com/travis-ci/travis-ci/issues/8295#issuecomment-454167006
-    - &test
-      stage: test
-      script:
-        - set -o pipefail
-        - xcodebuild "$ACTION" -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO -destination "$DEST" | xcpretty -c
-    - stage: deploy-docs
-      #if: branch = master AND type != pull_request
-      before_install:
-        - gem update --system
-        - gem install bundler
+    # - &test
+    #   stage: test
+    #   script:
+    #     - set -o pipefail
+    #     - xcodebuild "$ACTION" -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO -destination "$DEST" | xcpretty -c
+    # - stage: verify documentation
+    #   before_install:
+    #     - gem update --system
+    #     - gem install cocoapods
+    #   script:
+    #     - nef compile contents/Documentation
+    - stage: deploy microsite
+      # if: branch = master AND type != pull_request
       script:
         - nef jekyll --project contents/Documentation --output docs --main-page contents/Home.md
       deploy:
@@ -42,5 +45,5 @@ jobs:
         github-token: $GITHUB_TOKEN
         keep-history: true
         local-dir: docs
-        on:
-          branch: gh-pages
+        target-branch: gh-pages
+        all_branches: true
