--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title: nef
 #-------------------------
 name: nef
 #-------------------------
-description: A set of command line tools that let you have compile time verification of your documentation written as Swift Playground
+description: A set of command line tools that let you have compile time verification of your documentation written as Xcode Playground
 #-------------------------
 author: 47 Degrees
-keywords: functional-programming, monads, monad-transformers, functional-data-structure, swift, bow, fp-types, adt, free-monads, tagless-final, mtl, for-comprehension, category-theory
+keywords: functional-programming, monads, monad-transformers, functional-data-structure, swift, bow, xcode, xcode-playgrounds, playgrounds, fp-types, adt, free-monads, tagless-final, mtl, for-comprehension, category-theory
 #-------------------------
 url: https://www.47deg.com
 #-------------------------
