--- a/docs/_data/features.yml
+++ b/docs/_data/features.yml
@@ -1,16 +1,16 @@
 content:
     - title: Verification
-      description: Eases the creation of Swift Playgrounds with support for third party libraries.
+      description: Eases the creation of Xcode Playgrounds with support for third party libraries.
       icon: img/main-image-primary.svg
 
     - title: Compile
-      description: Compiles Swift Playgrounds with support for third party libraries from the command line.
+      description: Compiles Xcode Playgrounds with support for third party libraries from the command line.
       icon: img/main-image-secondary.svg
 
     - title: Generation
-      description: Generates Markdown project from Swift Playground.
+      description: Generates Markdown project from Xcode Playground.
       icon: img/main-image-tertiary.svg
-      
+
     - title: Integration
-      description: Integrates Swift Playgrounds with Jekyll to create a microsite.
+      description: Integrates Xcode Playgrounds with Jekyll to create a microsite.
       icon: img/main-image-quaternary.svg
