--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: swift
 osx_image: xcode10.2
 
+sudo: required
+addons:
+  homebrew:
+    taps:
+    - bow-swift/nef
+    packages:
+    - nef
+
 env:
   global:
     - PROJECT="./markdown/Markdown.xcodeproj"
@@ -21,7 +29,22 @@ jobs:
       script:
         - set -o pipefail
         - xcodebuild "$ACTION" -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" ONLY_ACTIVE_ARCH=NO -destination "$DEST" | xcpretty -c
-
-      #if: branch = master AND tag IS present
-      #script:
-      #  - sh ./bin/nef-release
+    - stage: verify documentation
+      before_install:
+        - gem update --system
+        - gem install cocoapods
+      script:
+        - nef compile contents/Documentation
+    - stage: deploy microsite
+      if: branch = master AND type != pull_request
+      script:
+        - nef jekyll --project contents/Documentation --output docs --main-page contents/Home.md
+      deploy:
+        provider: pages
+        skip-cleanup: true
+        github-token: $GITHUB_TOKEN
+        keep-history: true
+        local-dir: docs
+        target-branch: gh-pages
+        on:
+          all_branches: true
