added support for default colors

--- a/markdown/Markdown.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
+++ b/markdown/Markdown.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
@@ -61,6 +61,14 @@
             argument = "--to &quot;/Users/miguelangel/Desktop&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--size 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--background bow"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
