--- a/markdown/Markdown.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
+++ b/markdown/Markdown.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
@@ -66,7 +66,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--background bow"
+            argument = "--background #6ef0a7"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
