refactor name from ‘markdown’ to ‘core’ and set scheme name to ‘nef’

--- a/core/nef.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
+++ b/core/nef.xcodeproj/xcshareddata/xcschemes/Carbon.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1010"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-               BuildableName = "Markdown"
-               BlueprintName = "Markdown"
-               ReferencedContainer = "container:Markdown.xcodeproj">
+               BlueprintIdentifier = "8B0CA51522AE669600181BC0"
+               BuildableName = "Carbon"
+               BlueprintName = "Carbon"
+               ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,15 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-            BuildableName = "Markdown"
-            BlueprintName = "Markdown"
-            ReferencedContainer = "container:Markdown.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -55,10 +46,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-            BuildableName = "Markdown"
-            BlueprintName = "Markdown"
-            ReferencedContainer = "container:Markdown.xcodeproj">
+            BlueprintIdentifier = "8B0CA51522AE669600181BC0"
+            BuildableName = "Carbon"
+            BlueprintName = "Carbon"
+            ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <CommandLineArguments>
@@ -71,7 +62,11 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--filename &quot;Render&quot;"
+            argument = "--size 3"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--background #6ef0a7"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
@@ -84,16 +79,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
-            BuildableName = "Markdown"
-            BlueprintName = "Markdown"
-            ReferencedContainer = "container:Markdown.xcodeproj">
+            BlueprintIdentifier = "8B0CA51522AE669600181BC0"
+            BuildableName = "Carbon"
+            BlueprintName = "Carbon"
+            ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
