--- a/core/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
+++ b/core/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1010"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B0CA51522AE669600181BC0"
-               BuildableName = "Carbon"
-               BlueprintName = "Carbon"
-               ReferencedContainer = "container:Markdown.xcodeproj">
+               BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+               BuildableName = "Markdown"
+               BlueprintName = "Markdown"
+               ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+            BuildableName = "Markdown"
+            BlueprintName = "Markdown"
+            ReferencedContainer = "container:nef.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -46,10 +55,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B0CA51522AE669600181BC0"
-            BuildableName = "Carbon"
-            BlueprintName = "Carbon"
-            ReferencedContainer = "container:Markdown.xcodeproj">
+            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+            BuildableName = "Markdown"
+            BlueprintName = "Markdown"
+            ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <CommandLineArguments>
@@ -62,11 +71,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--size 3"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "--background #6ef0a7"
+            argument = "--filename &quot;Render&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
@@ -79,15 +84,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B0CA51522AE669600181BC0"
-            BuildableName = "Carbon"
-            BlueprintName = "Carbon"
-            ReferencedContainer = "container:Markdown.xcodeproj">
+            BlueprintIdentifier = "8B424B1E224E28FC00AF9010"
+            BuildableName = "Markdown"
+            BlueprintName = "Markdown"
+            ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
